fix(settings,addons): menu border-left shift, consistent transition easing

--- a/src/routes/Settings/Menu/Menu.less
+++ b/src/routes/Settings/Menu/Menu.less
@@ -21,6 +21,7 @@
         height: 3.5rem;
         border-radius: var(--border-radius);
         padding: 0 1.25rem;
+        border-left: 2px solid transparent;
         margin-bottom: 0.25rem;
         font-size: 1rem;
         font-weight: 500;
